FINAL ASSIGNMENT UPLOADED

--- a/MODULE 2 TOOLS FOR DATA SCIENCE/MODULE 2 FINAL ASSIGNMENT.ipynb
+++ b/MODULE 2 TOOLS FOR DATA SCIENCE/MODULE 2 FINAL ASSIGNMENT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ef8e9137",
+   "id": "876a5729",
    "metadata": {
     "tags": []
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5cc70c00",
+   "id": "e0992c06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d70861b1",
+   "id": "078b37fd",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "165e8459",
+   "id": "fa75ac36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e11a47e7",
+   "id": "662c0b94",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fb26a8ee",
+   "id": "9ccc6989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2a12a258",
+   "id": "c49a095e",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b426103b",
+   "id": "f75a1ef4",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a2063de6",
+   "id": "03efe26e",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ff125134",
+   "id": "4ae1566a",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5761d2b0",
+   "id": "5cd1a9b9",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b9d2728e",
+   "id": "4c08843d",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bcd68c18",
+   "id": "03ce7ded",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "699310bb",
+   "id": "f2871a62",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6da09aa4",
+   "id": "8fac7039",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2335da12",
+   "id": "d8127a10",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7e55676b",
+   "id": "c77ee04b",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b9debfe8",
+   "id": "f5070d56",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5a6711ca",
+   "id": "7ce49177",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "779bce60",
+   "id": "0b499ddb",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "66adadb0",
+   "id": "ffeb92d4",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "43a2c4a4",
+   "id": "66c6ca98",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e9906ff0",
+   "id": "2822f045",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1bca5d4",
+   "id": "18a4ee2f",
    "metadata": {},
    "source": [
     "## <span style=\"color:darkmagenta\">Objectives</span>\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f12ee72a",
+   "id": "25336802",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e8695ac",
+   "id": "2da63081",
    "metadata": {},
    "source": [
     "## <span style=\"color:darkblue\">Author: Mani Goldwater</span>"
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "50b1af79",
+   "id": "ac8aecfc",
    "metadata": {},
    "outputs": [
     {
@@ -763,16 +763,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d52d91",
+   "id": "d2ad680a",
    "metadata": {},
    "source": [
-    "<a href=\"https://github.com/ManiGoldwater/IBM-DATA-SCIENCE-CERTIFICATION/tree/main/MODULE%202%20TOOLS%20FOR%20DATA%20SCIENCE\" style=\"color: #008CBA; font-weight: bold;\">Link to GitHub Repository</a>"
+    "<a href=\"https://github.com/ManiGoldwater/IBM-DATA-SCIENCE-CERTIFICATION/blob/main/MODULE%202%20TOOLS%20FOR%20DATA%20SCIENCE/MODULE%202%20FINAL%20ASSIGNMENT.ipynb\" style=\"color: #008CBA; font-weight: bold;\">Link to GitHub Repository</a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0262801f",
+   "id": "f9c61215",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "71af4571",
+   "id": "e2e2113f",
    "metadata": {},
    "outputs": [
     {
